


                    JGoodies Looks, Version 1.2.1 Snapshot
                            Release Notes
                        

INTRODUCTION

    This maintenance release fixes a couple of bugs.


BUGS FIXED

    o ExtWin:    SpinnerUI broken in 1.4.0 and 1.4.1
    o ExtWin:    ToolBarSeperatorUI broken in 1.4.0 and 1.4.1
    o ExtWin:    Missing Java cup icon in 1.5
    o ExtWin:    LookUtils#isWindowsXPLafEnabled fails in IBM WSAD.
                 Actually it seems it fails on non-XP Windows flavors.


KNOWN ISSUES

    o This release still lacks an improved font management
      for the Plastic l&f family on non-Windows platforms.


OTHER CHANGES

    o ExtWin:    Reduced the number of updates to the UIDefaults.
    
    
-------------------------------------------------------------------------------

Find below the change history for older releases.





                    JGoodies Looks, Version 1.2.0
                            Release Notes
                        

INTRODUCTION

    This release requires Java 1.4 or later and fixes several bugs.

    Also, the included Simple Looks Demo now ships with the
    JGoodies SimpleInternalFrame that provides an eclipse-like
    appearance and an elegant means to structure panels.
    
    NOTE: Due to incompatible class changes it is strongly recommended 
    to not place the Looks jars in the Java extension directory!
    


DISTRIBUTION CHANGES

    o Removed JGoodies Motif Look&Feel
    o Moved 1.4 sources to the associated directories
    
    
VISUAL INCOMPATIBILITIES

    o Most Plastic and Plastic3D widget dimensions have been
      reduced by 1 or 2 pixels to use the same dimensions 
      as PlasticXP and the JGoodies Windows Look&Feel.
    o PlasticXP favors the focus indication over the default border.
    
    
BUGS FIXED

    o All l&fs:  Inconsistent JFormattedTextField font.
    o All l&fs:  Menu item layout doesn't honor a minimum arrow icon width