@@ -69,7 +69,7 @@
 	  <td>
 	<h1>:: Readme ::</h1>
 	
-	<i>JGoodies Looks, Version 1.2.1 Snapshot</i>
+	<i>JGoodies Looks, Version 1.2.1</i>
 
 	<p>
 	The JGoodies look&amp;feels make your Swing applications and applets look better. 
