@@ -10,8 +10,8 @@
 Name=JGoodies Looks
 name=looks
 spec.version=1.2
-impl.version=1.2.1-snapshot
-dist.version=1_2_1-20040202
+impl.version=1.2.1
+dist.version=1_2_1-20040215
 copyright.date=2001-2004
 copyright.owner=JGoodies Karsten Lentzsch
 copyright.message=Copyright &#169; ${copyright.date} ${copyright.owner}. All Rights Reserved. 
